# Bikash_session3

./: .gitignore  README.md  api_utils.py  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
