[project]
name = "semantic-explorer"
version = "0.1.0"
description = "Semantic Explorer Flask app with Gemini API"
requires-python = ">=3.9"

dependencies = [
    "flask",
    "sentence-transformers",
    "scikit-learn",
    "plotly",
    "google-generativeai",
    "python-dotenv",
    "pandas",
    "numpy"
]

[tool.uv]
# optional: you can pin Python or add constraints here
